--- a/timetable/templates/show-timetable.html
+++ b/timetable/templates/show-timetable.html
@@ -1,33 +1,32 @@
+
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
     <style>
        small {
         font-family: "Helvetica Neue";
        }
       </style>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    {% block scripts %}
+    <script  type="text/javascript" src="{% static 'js/timetable.js' %}" ></script>
+    {% endblock %}
 
-<script type="text/javascript">
-   $(function() {
-      $("#test").click(function() {
-         $.get(, function(data) {
-            alert(data);
-         });
-      });
-    });
-</script>
 </head>
-</head>
+
+
 <body>
 
 <form method="GET" >
-  {% csrf_token %}
+
   <div class="m-3">
   <div class="card text-center">
     <div class="card-header" style="background-image:none;background: #d2cab2;">Timetable</div>
@@ -71,10 +70,16 @@
     </div>
   </div>
 </form>
-<form method="POST" >
-{% csrf_token %}
-
-<input type="submit" value="OK" class="btn btn-outline-secondary btn-sm" id="test">
+{% block content %}
+<form method="GET" >
+  {% csrf_token %}
+  <input type="submit" value="OK" class="btn btn-outline-secondary btn-sm" id="target">
 </form>
+<form method="GET" >
+<a href="#" id="ajax-text-me">OK</a>
+<div id="more-text-here1"></div>
+<div id="more-text-here2"></div>
+</form>
+{% endblock %}
 </body>
 </html>
