--- a/timetable/templates/show-timetable.html
+++ b/timetable/templates/show-timetable.html
@@ -5,80 +5,119 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-    <style>
-       small {
-        font-family: "Helvetica Neue";
-       }
-      </style>
     {% block scripts %}
-    <script  type="text/javascript" src="{% static 'js/timetable.js' %}" ></script>
+      <script  type="text/javascript" src="{% static 'js/timetable.js' %}" ></script>
     {% endblock %}
+
+    <style>
+
+      .border-10{
+                border-style:solid;
+                border-width: 10px;
+                border-color: white;
+                }
+      .border-2{
+              border-style:solid;
+              border-top-width: 3px;
+              border-left-width: 0px;
+              border-right-width: 0px;
+              border-color: grey;
+              }
+       .backlight {background-color: rgb(180, 225, 225);}
+
+      </style>
 
 </head>
 
-
 <body>
+{% block content %}
+<form method="GET">
+<div class="border-10">
+<div class="text-center text-muted">
+  <h2>Timetable for a week {{mon}} - {{sun}} </h2>
+</div>
 
-<form method="GET" >
+<div class="row justify-content-center">
+          {% for days, timetable in timetable_dict.items %}
+          <div class="border-10">
+          <div class="card text-white bg-info mb-3 border border-white ">
 
-  <div class="m-3">
-  <div class="card text-center">
-    <div class="card-header" style="background-image:none;background: #d2cab2;">Timetable</div>
-  <div class="ml-2 my-2 my-sm-2 my-lg-2 p-2">
-     <div class="row justify-content-around">
-        {% for days, timetable in timetable_dict.items %}
-             <div class="row">
-                <div class="col-6 col-md-8" >
-                     <small>
-                     <table class="table">
-                        <thead>
-                              <tr>
-                                <th style="background-image:none;background: 	#f3edd9;" colspan="4">{{days}}</th>
-                              <tr>
-                              <tr >
-                                <th>Time</th>
-                                <th>Group</th>
-                                <th>Max</th>
-                                <th>Total</th>
-                              <tr>
-                        </thead>
-                        <tbody>
+            <div class="card-header text-center"><h4>{{days}}</h4></div>
+                       <table class="table table-hover">
+
+                          <thead class="table-info  text-muted">
+                                <tr class="border-2">
+                                  <th>Time</th>
+                                  <th>Group</th>
+                                  <th>Max/Total</th>
+                                </tr>
+                          </thead>
+                          <tbody>
                             {% for timetabl in timetable %}
                                 <tr>
                                   <td>{{timetabl.time |date:"H:i"}}</td>
                                   <td>{{timetabl.group }}</td>
-                                  <td>{{timetabl.max_student }}</td>
-                                  <td>{{timetabl.total}}</td>
-
-                                  <td></td>
+                                  <td ><a href="#"  data-toggle="modal" class="list-group-item-action"  onclick ="ShowModal( '{{timetabl.time |date:'H:i'}}' , '{{timetabl.group }}' ,'{{days}}')"  > {{timetabl.max_student }}/{{timetabl.total}} </a></td>
                                 </tr>
                             {% endfor %}
-                        </tbody>
-                      </table>
-                    </small>
-                  </div>
-              </div>
-           {% endfor %}
+                          </tbody>
+                        </table>
+                        </div>
+                </div>
+      {% endfor %}
+ </div>
+ </div>
+
+  <!-- Modal -->
+
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+
+        <div class="modal-header text-muted backlight border-2">
+
+            <div class="form-inline ">
+            <h4 class="modal-title"> Sign up for lessons &nbsp</h4>
+            <h4 class="modal-title" id ="lessons" class="modal-title"></h4>
+            <h4 class="modal-title"> &nbsp </h4>
+            <h4 class="modal-title" id ="day" class="modal-title"></h4>
+            <h4 class="modal-title"> &nbsp at &nbsp </h4>
+            <h4 class="modal-title" id ="time" class="modal-title"></h4>
+            </div>
+        </div>
+        <div  class="border-2">
+        <div class="modal-body bg-light text-muted">
+
+          <div class="form-group row">
+            <label class="col-sm-2 col-form-label">
+              Name </label>
+              <div > <input value=""  type="text" name="name" class="form-control" required> </div>
+              <small id="nameHelp" class="form-text text-muted">sas</small>
+          </div>
+          <div class="form-group row">
+              <label class="control-label col-sm-2 col-form-label">
+                Email </label>
+                <div > <input value="" type="email" name="email" class="form-control "   required> </div>
+                <small id="emailHelp" class="form-text text-muted">dsd</small>
+            </div>
+        </div>
+
+        <div class="modal-footer bg-light">
+          <button type="button" class="btn btn-info" onclick ="SignUp()"> Sign up </button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
+      </div>
+
     </div>
   </div>
-</form>
-{% block content %}
-<form method="GET" >
-  {% csrf_token %}
-  <input type="submit" value="OK" class="btn btn-outline-secondary btn-sm" id="target">
-</form>
-<form method="GET" >
-<a href="#" id="ajax-text-me">OK</a>
-<div id="more-text-here1"></div>
-<div id="more-text-here2"></div>
+
 </form>
 {% endblock %}
 </body>
