--- a/groups/templates/all_groups.html
+++ b/groups/templates/all_groups.html
@@ -26,13 +26,13 @@
     <tr>
       <td>{{ group.id }}</td>
       <td>{{ group.name }}</td>
-  
+
     </tr>
   {% endfor %}
   </tbody>
 </div>
 </table>
-
-
+<div>
+<?php $x = 5; echo 5; ?></div>
 </body>
 </html>
